# detterot

./: CONTRIBUTING.md  Cargo.toml  README.md
.cargo/: config.toml
.qwen/: PROJECT_SUMMARY.md
assets/: CHANGELOG.md
ci/: .clippy.toml  deny_floats.toml  grep_banned_random.sh  local_audit_m1.sh
crates/game/: Cargo.toml
crates/game/logs/m2/: leg_duration_tolerance.jsonl  mission_result.jsonl  post_leg_summary.jsonl  spawn_budget.jsonl
crates/game/logs/world/: weather.jsonl
crates/game/src/: app_state.rs  cli.rs  diagnostics.rs  lib.rs  main.rs  perf_scene.rs  runtime.rs  scheduling.rs
crates/game/src/logs/: m2.rs  mod.rs  trading.rs  world.rs
crates/game/src/plugins/: mod.rs  visuals.rs
crates/game/src/systems/: app_state.rs  board_cache.rs  command_queue.rs  mod.rs  save.rs
crates/game/src/systems/director/: config.rs  econ_intent.rs  input.rs  missions.rs  mod.rs  pause_wheel.rs  rng.rs  spawn.rs
crates/game/src/systems/economy/: basis.rs  di.rs  interest.rs  log.rs  mod.rs  money.rs  planting.rs  pricing.rs  rng.rs  rot.rs  rounding.rs  rulepack.rs  state.rs  types.rs
crates/game/src/systems/economy/tests/: basis_dynamics_golden.rs  di_golden.rs  interest_piecewise_golden.rs  mod.rs  planting_pull.rs  pricing_rounding_golden.rs  rng_discipline.rs  rot_convert.rs  rulepack_load.rs  state_step.rs  state_step_golden.json
crates/game/src/systems/gameplay/: drift.rs  los.rs  mod.rs
crates/game/src/systems/migrations/: mod.rs  v1.rs
crates/game/src/systems/save/: mod.rs  v1_1.rs  v1_2.rs
crates/game/src/systems/save/tests/: mod.rs
crates/game/src/systems/trading/: engine.rs  inventory.rs  meters.rs  mod.rs  pricing_vm.rs  types.rs
crates/game/src/systems/trading/tests/: accounting_identity.rs  capacity_enforcement.rs  commodities_loader.rs  mod.rs  price_constancy.rs  pricing_vm_rounding.rs
crates/game/src/ui/: hub_trade.rs  mod.rs  route_planner.rs  styles.rs
crates/game/src/ui/tests/: buy_sell_flow_headless.rs  mod.rs  route_planner_vm.rs  ui_vm_shape.rs
crates/game/src/world/: boardgen.rs  canon.rs  index.rs  loader.rs  mod.rs  schema.rs  weather.rs
crates/game/src/world/tests/: forecast_determinism.rs  mod.rs  neighbors_shape.rs
crates/game/tests/: board_goldens.rs  danger_sign.rs  director_metrics.rs  golden_builder.rs  integration.rs  missions_cfg_link.rs  missions_determinism.rs  missions_m2_scripts.rs  multi_leg_progress.rs  pause_resumes.rs  physics_step.rs  replay_golden.rs  schedule_order.rs  serde_roundtrip.rs  spawn_monotone.rs  trading_replay.rs  wheel_state_transitions.rs
crates/game/tests/goldens/: save_v11_roundtrip.json  save_v1_1_roundtrip.json  save_v1_roundtrip.json
crates/game/tests/integration/: buy_sell_flow_headless.rs  danger_sign.rs  director_config_strict.rs  hub_trade_ui.rs  migrate_roundtrip.rs  migrate_v1_to_v11.rs  missions_cfg_link.rs  physics_step.rs  replay_golden.rs  save_load_integration.rs  schedule_order.rs  serde_roundtrip.rs  serde_v11_roundtrip.rs  spawn_monotone.rs  spawn_type_determinism.rs  ui_vm_shape.rs  wheel_state_transitions.rs
crates/game/tests/support/: repro.rs
(+66 files in other folders)
