[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
avian3d = { workspace = true }
bevy = { workspace = true }
bevy_kira_audio = { workspace = true, optional = true }
blake3 = "1"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
rand_core = "0.9"
rand_xoshiro = "0.7"
repro = { path = "../repro" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
worldgen = { path = "../worldgen" }

[features]
default = []
dev = ["avian3d/debug-plugin"]
econ_logs = []
deterministic = []
m2_logs = []
audio = ["bevy_kira_audio"]

[dev-dependencies]
tempfile = "3"

[lints.clippy]
float_arithmetic = "deny"
