[package]
name = "game"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "game"
path = "src/main.rs"
test = false
bench = false

[dependencies]
anyhow = "1"
avian3d = { workspace = true, optional = true }
bevy = { workspace = true }
blake3 = "1"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
rand_core = "0.9"
rand_xoshiro = "0.7"
repro = { path = "../repro" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
wyhash = "0.5"
smallvec = "1"
worldgen = { path = "../worldgen" }

[features]
default = []
avian_physics = ["dep:avian3d"]
dev = ["avian_physics", "avian3d/debug-plugin"]
deterministic = []
econ_logs = []
m2_logs = []
m3_logs = []

[dev-dependencies]
tempfile = "3"

[lints.clippy]
float_arithmetic = "deny"
